--- a/main/src/main/resources/application-dev.yml
+++ b/main/src/main/resources/application-dev.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: 'main'
+    bucket:
+      name: sysdoc-devschool
   datasource:
     Driver: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:32779/document
@@ -10,3 +12,12 @@ spring:
     host: 'redis'
     timeout: 10000
 
+cloud:
+  aws:
+    credentials:
+      access-key: AKIAZN7XOX3WLI5RR4EY
+      secret-key: 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
+    region:
+      static: sa-east-1 
+    stack:
+      auto: false
