--- a/main/pom.xml
+++ b/main/pom.xml
@@ -87,6 +87,10 @@
 			<artifactId>spring-cloud-starter-aws</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
